Changelog
=========

Version 0.1.3 - July xx, 2013
-----------------------------

* Support XPath namespace prefixes and CSS namespace prefixes in DefaultSelectorHandler
* Bug fixes:
 * #2: XPath namespace prefixes raise cssselect.xpath.ExpressionError with DefaultSelectorHandler

Version 0.1.2 - July 9, 2013
-----------------------------

* Bug fixes:
 * #1: headingxpath rule does not seem to work as expected

Version 0.1.1 - July 3, 2013
-----------------------------

* Docstrings added to main classes and methods.
* Added parse_fromstring() method to Parselet
* Added tests for Parselet.parse() and Parselet.parse_fromstring()

Version 0.1 - June 30, 2013
---------------------------

Initial release